# Webcam-SDL2

./: .travis.yml  README.md  yuv2jpeg.sh
src/: CMakeLists.txt  Makefile  main.c  v4l2_driver.c  v4l2_driver.h
